# loom

./: .gitignore  AGENTS.md  Justfile  README.md  build.zig  build.zig.zon  pyproject.toml
compiler/: __init__.py  codegen.py  patterns.py  quant_utils.py  relax.py  runtime.py
docs/: cfu.md  firmware.md  social-media-strategy.md
docs/course/: 00-architecture.md  02-datapath.md
docs/course/solutions/03-fusion/: rdbpot.py  srdhm.py  srdhm_reference.py
docs/course/solutions/04-engine/: bsram_layout.md  sequencer_fsm.md
docs/course/solutions/05-compiler/: ops_accel.py
docs/course/solutions/06-model/: mobilenet_runner.py
docs/course/solutions/07-systolic/: pe.py
docs/tutorial/: 00-overview.md  01-mac.md  02-vertical-slice.md  03-autonomous.md  04-tinygrad.md  05-scaling.md  appendix-prior-art.md
driver/: driver.zig  main.zig
firmware/: build.zig  build.zig.zon  dispatch.zig  interpreter.zig  link.zig  linker.ld  main.zig  mmio.zig  uart.zig
firmware/src/: cfu.zig  csr_hw.zig  csr_sim.zig  dispatch.zig  link.zig  main.zig  uart.zig
hardware/: cfu.py  mac.py  rw.py  test_mac.py  test_top.py  top.py
hardware/control/: os_sequencer.py  sequencer.py  test_sequencer.py  test_ws_sequencer.py  ws_sequencer.py
hardware/decoder/: instructions.py
hardware/epilogue/: epilogue.py  quant.py  test_epilogue.py  test_quant.py
hardware/experiments/: test_os_vs_ws.py  ws_pe.py  ws_pe_array.py
hardware/memory/: scratchpad.py  test_scratchpad.py
hardware/systolic/: os_pe_array.py  test_os_pe.py  test_os_pe_array.py  test_skew.py  test_ws_pe.py  test_ws_pe_array.py
host/: c_api.zig  client.py  driver.zig
host/lib/: protocol.py  seriallink.py  simlink.py
models/: mnist.py
shared/: cfu.zig  ir.py  protocol.zig
sim/: accel.repl  accel.resc  sim.py
sim/cfu/: CMakeLists.txt  sim_main.cpp
sim/cfu/buses/: cfu.h
soc/: README.md  sim.py
tests/: conftest.py  sim_run.py  test_gemm.py  test_sim.py  tvm_debug_pipeline.py
tools/: litex_upload_once.py  sim_run.py  test_gemm.py  test_tvm_pipeline.py  tvm_sim_test.py
tvm/: codegen.py  patterns.py  quant_utils.py  relax.py  runtime.py
