[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "accel"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<3.11"
dependencies = [
    "amaranth>=0.5.8",
    "crcmod",
    "litex",
    "litex-boards",
    "litedram",
    "pythondata-cpu-vexriscv",
    "pythondata-software-compiler_rt",
    "pythondata-software-picolibc",
    "pytest>=9.0.2",
    "liteeth",
    "pythondata-misc-tapcfg",
    "litescope>=2024.12",
    "pyserial",
    "litespi>=2024.12",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.1.0",
    "tvm",
]

[project.scripts]
litex-upload-once = "tools.litex_upload_once:main"
accel-gemm = "tools.test_gemm:main"

[tool.setuptools.packages.find]
include = ["tools*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["hardware", "hardware/systolic", "hardware/memory", "hardware/epilogue"]
pythonpath = ["."]

[tool.ty.src]
root = "hardware"

[tool.uv.sources]
tvm = { path = "../tvm", editable = true }
# litex = { path = "../litex/litex", editable = true }
# litex-boards = { path = "../litex/litex-boards", editable = true }
# litedram = { path = "../litex/litedram", editable = true }
# liteeth = { path = "../litex/liteeth", editable = true }
# pythondata-cpu-vexriscv = { path = "../litex/pythondata-cpu-vexriscv", editable = true }
# pythondata-software-compiler_rt = { path = "../litex/pythondata-software-compiler_rt", editable = true }
# pythondata-software-picolibc = { path = "../litex/pythondata-software-picolibc", editable = true }
# pythondata-misc-tapcfg = { path = "../litex/pythondata-misc-tapcfg", editable = true }
